--- a/src/InteractiveWindow/Editor/InteractiveWindow.csproj
+++ b/src/InteractiveWindow/Editor/InteractiveWindow.csproj
@@ -16,7 +16,6 @@
     <RestorePackages>true</RestorePackages>
     <VSSDKTargetPlatformRegRootSuffix>RoslynDev</VSSDKTargetPlatformRegRootSuffix>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
   </PropertyGroup>
@@ -24,6 +23,7 @@
   </PropertyGroup>
   <ItemGroup>
     <InternalsVisibleToTest Include="Roslyn.InteractiveWindow.UnitTests" />
+    <InternalsVisibleTo Include="Microsoft.VisualStudio.InteractiveServices" />
     <InternalsVisibleTo Include="Microsoft.VisualStudio.VsInteractiveWindow" />
   </ItemGroup>
   <ItemGroup>
@@ -125,29 +125,8 @@
     <Compile Include="..\..\Compilers\Core\Portable\InternalUtilities\ExceptionUtilities.cs">
       <Link>InternalUtilities\ExceptionUtilities.cs</Link>
     </Compile>
-    <Compile Include="..\..\Compilers\Core\Portable\InternalUtilities\FailFast.cs">
-      <Link>InternalUtilities\FailFast.cs</Link>
-    </Compile>
     <Compile Include="..\..\Compilers\Core\Portable\InternalUtilities\FatalError.cs">
       <Link>InternalUtilities\FatalError.cs</Link>
-    </Compile>
-    <Compile Include="..\..\VisualStudio\Core\Def\Implementation\Watson\ErrorReportSettings.cs">
-      <Link>InternalUtilities\ErrorReportSettings.cs</Link>
-    </Compile>
-    <Compile Include="..\..\VisualStudio\Core\Def\Implementation\Watson\ExceptionInfo.cs">
-      <Link>InternalUtilities\ExceptionInfo.cs</Link>
-    </Compile>
-    <Compile Include="..\..\VisualStudio\Core\Def\Implementation\Watson\NativeWin32Stubs.cs">
-      <Link>InternalUtilities\NativeWin32Stubs.cs</Link>
-    </Compile>
-    <Compile Include="..\..\VisualStudio\Core\Def\Implementation\Watson\Watson.cs">
-      <Link>InternalUtilities\Watson.cs</Link>
-    </Compile>
-    <Compile Include="..\..\VisualStudio\Core\Def\Implementation\Watson\WatsonErrorReport.cs">
-      <Link>InternalUtilities\WatsonErrorReport.cs</Link>
-    </Compile>
-    <Compile Include="..\..\VisualStudio\Core\Def\Implementation\Watson\WatsonReporter.cs">
-      <Link>InternalUtilities\WatsonReporter.cs</Link>
     </Compile>
   </ItemGroup>
   <ItemGroup>
