--- a/NuGet.Config
+++ b/NuGet.Config
@@ -12,6 +12,7 @@
     <clear />
     <add key="myget.org dotnet-core" value="https://www.myget.org/F/dotnet-core/" />
     <add key="myget.org dotnet-corefx" value="https://www.myget.org/F/dotnet-corefx/" />
+    <add key="myget.org dotnet-buildtools" value="https://www.myget.org/F/dotnet-buildtools/" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 
