--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests.csproj
@@ -146,17 +146,17 @@
     <Compile Include="ProjectSystem\UnconfiguredProjectCommonServicesTests.cs" />
     <Compile Include="Testing\ProjectSystemTraitDiscover.cs" />
     <Compile Include="Testing\ProjectTreeAssert.cs" />
-    <Compile Include="Testing\ProjectTreeParser.cs" />
-    <Compile Include="Testing\ProjectTreeParserTests.cs" />
+    <Compile Include="Testing\ProjectTreeParser\ProjectTreeParser.cs" />
+    <Compile Include="Testing\ProjectTreeParser\ProjectTreeParserTests.cs" />
     <Compile Include="Testing\ProjectTreeProvider.MutableProjectTree.cs" />
     <Compile Include="Testing\ProjectTreeProvider.cs" />
     <Compile Include="Testing\ProjectTreeProviderTests.cs" />
     <Compile Include="Testing\ProjectTreeWriter.cs" />
-    <Compile Include="Testing\StringReader.cs" />
-    <Compile Include="Testing\Tokenizer.ParseOptions.cs" />
-    <Compile Include="Testing\Tokenizer.TokenType.cs" />
-    <Compile Include="Testing\Tokenizer.Token.cs" />
-    <Compile Include="Testing\Tokenizer.cs" />
+    <Compile Include="Testing\ProjectTreeParser\StringReader.cs" />
+    <Compile Include="Testing\ProjectTreeParser\Tokenizer.LiteralParseOptions.cs" />
+    <Compile Include="Testing\ProjectTreeParser\Tokenizer.TokenType.cs" />
+    <Compile Include="Testing\ProjectTreeParser\Tokenizer.Token.cs" />
+    <Compile Include="Testing\ProjectTreeParser\Tokenizer.cs" />
     <Compile Include="Trait.cs" />
     <Compile Include="UnitTestTraitAttribute.cs" />
   </ItemGroup>
