--- a/src/EditorFeatures/CSharpTest/CSharpEditorServicesTest.csproj
+++ b/src/EditorFeatures/CSharpTest/CSharpEditorServicesTest.csproj
@@ -272,6 +272,7 @@
     <Compile Include="Formatting\Indentation\FormatterTestsBase.cs" />
     <Compile Include="Formatting\Indentation\SmartIndenterEnterOnTokenTests.cs" />
     <Compile Include="Formatting\Indentation\SmartIndenterTests.cs" />
+    <Compile Include="Formatting\Indentation\SmartIndenterTests_Performance.cs" />
     <Compile Include="Formatting\Indentation\SmartTokenFormatterFormatRangeTests.cs" />
     <Compile Include="Formatting\Indentation\SmartTokenFormatterFormatTokenTests.cs" />
     <Compile Include="Interactive\BraceMatching\InteractiveBraceHighlightingTests.cs" />
