--- a/src/Roslyn.Diagnostics.Analyzers/UnitTests/packages.config
+++ b/src/Roslyn.Diagnostics.Analyzers/UnitTests/packages.config
@@ -1,16 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis" version="1.2.0-beta-20151118-02" targetFramework="net452" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.2.0-beta-20151118-02" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.2.0-beta-20151118-02" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.2.0-beta-20151118-02" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="1.2.0-beta-20151118-02" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="1.2.0-beta-20151118-02" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.2.0-beta-20151118-02" targetFramework="net452" />
   <package id="Microsoft.Composition" version="1.0.27" targetFramework="net452" />
-  <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
-  <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net452" />
+  <package id="System.Collections" version="4.0.0" targetFramework="net452" />
+  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net452" />
+  <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net452" />
+  <package id="System.Globalization" version="4.0.0" targetFramework="net452" />
+  <package id="System.IO" version="4.0.0" targetFramework="net452" />
+  <package id="System.Linq" version="4.0.0" targetFramework="net452" />
+  <package id="System.Reflection" version="4.0.0" targetFramework="net452" />
+  <package id="System.Reflection.Extensions" version="4.0.0" targetFramework="net452" />
+  <package id="System.Reflection.Metadata" version="1.1.0" targetFramework="net452" />
+  <package id="System.Reflection.Primitives" version="4.0.0" targetFramework="net452" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net452" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net452" />
+  <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices" version="4.0.0" targetFramework="net452" />
+  <package id="System.Text.Encoding" version="4.0.0" targetFramework="net452" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.0" targetFramework="net452" />
+  <package id="System.Threading" version="4.0.0" targetFramework="net452" />
   <package id="xunit" version="2.0.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
   <package id="xunit.assert" version="2.0.0" targetFramework="net452" />
