--- a/src/Compilers/VisualBasic/VbcCore/project.json
+++ b/src/Compilers/VisualBasic/VbcCore/project.json
@@ -1,48 +1,49 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.Platforms": "1.0.1-beta-23428",
-    "Microsoft.NETCore.Runtime.CoreCLR": "1.0.1-beta-23428",
-    "Microsoft.NETCore.TestHost": "1.0.0-beta-23428",
-    "System.AppContext": "4.0.1-beta-23428",
-    "System.Collections": "4.0.11-beta-23428",
-    "System.Collections.Immutable": "1.1.37",
-    "System.Console": "4.0.0-beta-23428",
-    "System.Diagnostics.Debug": "4.0.11-beta-23428",
-    "System.Diagnostics.FileVersionInfo": "4.0.0-beta-23428",
-    "System.Diagnostics.Process": "4.1.0-beta-23428",
-    "System.Diagnostics.StackTrace": "4.0.1-beta-23428",
-    "System.Diagnostics.Tools": "4.0.1-beta-23428",
-    "System.Dynamic.Runtime": "4.0.11-beta-23428",
-    "System.IO.FileSystem": "4.0.1-beta-23428",
-    "System.IO.FileSystem.Watcher": "4.0.0-beta-23428",
-    "System.IO.Pipes": "4.0.0-beta-23428",
-    "System.Linq": "4.0.1-beta-23428",
-    "System.Net.NameResolution": "4.0.0-beta-23428",
-    "System.Net.Sockets": "4.1.0-beta-23428",
-    "System.Private.Uri": "4.0.1-beta-23428",
-    "System.Reflection": "4.1.0-beta-23428",
-    "System.Reflection.Primitives": "4.0.1-beta-23428",
-    "System.Resources.ResourceManager": "4.0.1-beta-23428",
-    "System.Runtime": "4.0.21-beta-23428",
-    "System.Runtime.Extensions": "4.0.11-beta-23428",
-    "System.Runtime.Handles": "4.0.1-beta-23428",
-    "System.Runtime.InteropServices": "4.0.21-beta-23428",
-    "System.Runtime.Loader": "4.0.0-beta-23428",
-    "System.Runtime.Numerics": "4.0.1-beta-23428",
-    "System.Runtime.Serialization.Json": "4.0.1-beta-23428",
-    "System.Security.Cryptography.Algorithms": "4.0.0-beta-23428",
-    "System.Security.Cryptography.Encoding": "4.0.0-beta-23428",
-    "System.Security.Cryptography.X509Certificates": "4.0.0-beta-23428",
-    "System.Text.Encoding": "4.0.11-beta-23428",
-    "System.Text.Encoding.CodePages": "4.0.1-beta-23428",
-    "System.Text.Encoding.Extensions": "4.0.11-beta-23428",
-    "System.Threading": "4.0.11-beta-23428",
-    "System.Threading.Tasks": "4.0.11-beta-23428",
-    "System.Threading.Tasks.Parallel": "4.0.1-beta-23428",
-    "System.Threading.Thread": "4.0.0-beta-23428",
-    "System.Xml.XDocument": "4.0.11-beta-23428",
-    "System.Xml.XmlDocument": "4.0.1-beta-23428",
-    "System.Xml.XPath.XDocument": "4.0.1-beta-23428",
+    "Microsoft.NETCore.Platforms": "1.0.1-rc2-23604",
+    "Microsoft.NETCore.Runtime.CoreCLR": "1.0.1-rc2-23604",
+    "Microsoft.NETCore.TestHost": "1.0.0-rc2-23604",
+    "System.AppContext": "4.0.1-rc2-23604",
+    "System.Collections": "4.0.11-rc2-23604",
+    "System.Collections.Immutable": "1.1.38-rc2-23604",
+    "System.Console": "4.0.0-rc2-23604",
+    "System.Diagnostics.Debug": "4.0.11-rc2-23604",
+    "System.Diagnostics.FileVersionInfo": "4.0.0-rc2-23604",
+    "System.Diagnostics.Process": "4.1.0-rc2-23604",
+    "System.Diagnostics.StackTrace": "4.0.1-rc2-23604",
+    "System.Diagnostics.Tools": "4.0.1-rc2-23604",
+    "System.Dynamic.Runtime": "4.0.11-rc2-23604",
+    "System.IO.FileSystem": "4.0.1-rc2-23604",
+    "System.IO.FileSystem.Watcher": "4.0.0-rc2-23604",
+    "System.IO.Pipes": "4.0.0-rc2-23604",
+    "System.Linq": "4.0.1-rc2-23604",
+    "System.Net.NameResolution": "4.0.0-rc2-23604",
+    "System.Net.Sockets": "4.1.0-rc2-23604",
+    "System.Private.Uri": "4.0.1-rc2-23604",
+    "System.Reflection": "4.1.0-rc2-23604",
+    "System.Reflection.Metadata": "1.1.1-rc2-23604",
+    "System.Reflection.Primitives": "4.0.1-rc2-23604",
+    "System.Resources.ResourceManager": "4.0.1-rc2-23604",
+    "System.Runtime": "4.0.21-rc2-23604",
+    "System.Runtime.Extensions": "4.0.11-rc2-23604",
+    "System.Runtime.Handles": "4.0.1-rc2-23604",
+    "System.Runtime.InteropServices": "4.0.21-rc2-23604",
+    "System.Runtime.Loader": "4.0.0-rc2-23604",
+    "System.Runtime.Numerics": "4.0.1-rc2-23604",
+    "System.Runtime.Serialization.Json": "4.0.1-rc2-23604",
+    "System.Security.Cryptography.Algorithms": "4.0.0-rc2-23604",
+    "System.Security.Cryptography.Encoding": "4.0.0-rc2-23604",
+    "System.Security.Cryptography.X509Certificates": "4.0.0-rc2-23604",
+    "System.Text.Encoding": "4.0.11-rc2-23604",
+    "System.Text.Encoding.CodePages": "4.0.1-rc2-23604",
+    "System.Text.Encoding.Extensions": "4.0.11-rc2-23604",
+    "System.Threading": "4.0.11-rc2-23604",
+    "System.Threading.Tasks": "4.0.11-rc2-23604",
+    "System.Threading.Tasks.Parallel": "4.0.1-rc2-23604",
+    "System.Threading.Thread": "4.0.0-rc2-23604",
+    "System.Xml.XDocument": "4.0.11-rc2-23604",
+    "System.Xml.XmlDocument": "4.0.1-rc2-23604",
+    "System.Xml.XPath.XDocument": "4.0.1-rc2-23604"
   },
   "frameworks": {
     "dnxcore50": {
