--- a/src/Workspaces/VisualBasicTest/VisualBasicServicesTest.vbproj
+++ b/src/Workspaces/VisualBasicTest/VisualBasicServicesTest.vbproj
@@ -24,6 +24,10 @@
       <Project>{7FE6B002-89D8-4298-9B1B-0B5C247DD1FD}</Project>
       <Name>CompilerTestResources</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Compilers\Test\Utilities\VisualBasic\BasicCompilerTestUtilities.vbproj">
+      <Project>{4371944a-d3ba-4b5b-8285-82e5ffc6d1f8}</Project>
+      <Name>BasicCompilerTestUtilities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Test\Utilities\Portable.FX45\TestUtilities.FX45.csproj">
       <Project>{f7712928-1175-47b3-8819-ee086753dee2}</Project>
       <Name>TestUtilities.FX45</Name>
@@ -36,6 +40,10 @@
       <Project>{76C6F005-C89D-4348-BB4A-391898DBEB52}</Project>
       <Name>TestUtilities.Desktop</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CoreTest\ServicesTest.csproj">
+      <Project>{c50166f1-babc-40a9-95eb-8200080cd701}</Project>
+      <Name>ServicesTest</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Core\Desktop\Workspaces.Desktop.csproj">
       <Project>{2e87fa96-50bb-4607-8676-46521599f998}</Project>
       <Name>Workspaces.Desktop</Name>
@@ -47,10 +55,6 @@
     <ProjectReference Include="..\Core\Portable\Workspaces.csproj">
       <Project>{5F8D2414-064A-4B3A-9B42-8E2A04246BE5}</Project>
       <Name>Workspaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CoreTest\ServicesTest.csproj">
-      <Project>{C50166F1-BABC-40A9-95EB-8200080CD701}</Project>
-      <Name>ServicesTest</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -107,7 +111,7 @@
     <EmbeddedResource Include="Formatting\XmlLiterals.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>XmlLiterals.Designer.vb</LastGenOutput>
-      <CustomToolNamespace>My.Resources</CustomToolNamespace>
+      <CustomToolNamespace>Microsoft.CodeAnalysis.VisualBasic.UnitTests.Formatting.My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
